welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:24: error: type mismatch;
 found   : Int(0)
 required: String
				}else{return 0}				
                                             ^